<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.AuthActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/start_sing_up_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        android:text="@string/sing_up_text"
        android:textColor="@color/white2"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/caption_auth2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_theme_margin_elements"
        android:text="@string/info_text"
        android:textColor="@color/white2"
        android:textSize="@dimen/extra_small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_sing_up_caption" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_size"
        android:layout_marginTop="@dimen/vertical_theme_margin_elements"
        android:layout_marginEnd="@dimen/small_margin_size"
        android:hint="@string/e_mail_caption"
        android:textColorHint="@color/gray4"
        app:boxBackgroundColor="@color/background_color"
        app:boxStrokeColor="@drawable/custom_style"
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/gray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption_auth2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/gray4"
            android:textColorHint="@color/gray4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_size"
        android:layout_marginTop="@dimen/middle_margin_size"
        android:layout_marginEnd="@dimen/small_margin_size"
        android:hint="@string/password_caption"
        android:textColorHint="@color/gray4"
        app:boxBackgroundColor="@color/background_color"
        app:boxStrokeColor="@drawable/custom_style"
        app:hintTextColor="@color/gray4"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="8"
            android:singleLine="true"
            android:textColor="@color/gray4"
            android:textColorHint="@color/gray4" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/save_pwd_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_size"
        android:layout_marginTop="@dimen/vertical_theme_margin_elements"
        android:fontFamily="@font/opensans"
        android:text="@string/remember_me_text"
        android:textColor="@color/gray2"
        android:textSize="@dimen/extra_small_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <Button
        android:id="@+id/google_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin_size"
        android:layout_marginEnd="@dimen/small_margin_size"
        android:backgroundTint="@color/white2"
        android:drawableLeft="@drawable/google_logo"
        android:fontFamily="@font/opensans"
        android:stateListAnimator="@null"
        android:text="@string/google_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_text_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans"
        android:text="@string/or_text"
        android:textColor="@color/white2"
        android:textSize="@dimen/text"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/google_auth"
        app:layout_constraintStart_toStartOf="@+id/google_auth"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/registry_height"
        android:layout_marginStart="@dimen/small_margin_size"
        android:layout_marginEnd="@dimen/small_margin_size"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:backgroundTint="@color/background_color"
        android:fontFamily="@font/opensans"
        android:stateListAnimator="@null"
        android:text="@string/register_text"
        android:textColor="@color/white2"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_under_reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/btn_color"
        app:strokeWidth="@dimen/stroke_width" />

    <TextView
        android:id="@+id/tv_under_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:text="@string/bottom_text"
        android:textColor="@color/white2"
        android:textSize="@dimen/mega_small_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_already_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:text="@string/ask_account_caption"
        android:textColor="@color/gray2"
        android:textSize="@dimen/extra_small_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_under_reg_btn" />

    <TextView
        android:id="@+id/tv_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extra_small_margin"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:text="@string/sign_in_caption"
        android:textColor="@color/white2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_already_acc" />

</androidx.constraintlayout.widget.ConstraintLayout>