<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toTopOf="@+id/gl_middle_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/vertical_theme_margin_elements"
            android:layout_marginTop="@dimen/vertical_theme_margin_elements"
            android:fontFamily="@font/opensans"
            android:text="@string/settings_text"
            android:textColor="@color/white2"
            android:textSize="@dimen/large_text"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Circle avatar -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/avatar_width"
            android:layout_height="@dimen/avatar_height"
            android:layout_marginTop="@dimen/vertical_theme_avatar_top_margin"
            android:src="@drawable/user_avatar"
            app:civ_border_color="@color/background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_avatar" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_theme_margin_elements"
            android:fontFamily="@font/opensans"
            android:text="@string/user_name_text"
            android:textColor="@color/white2"
            android:textSize="@dimen/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_theme_margin_elements"
            android:fontFamily="@font/opensans"
            android:text="@string/career_text"
            android:textColor="@color/gray2"
            android:textSize="@dimen/extra_small_text"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_theme_margin_elements"
            android:fontFamily="@font/opensans"
            android:text="@string/home_address_text"
            android:textColor="@color/gray2"
            app:layout_constraintEnd_toEndOf="@+id/career"
            app:layout_constraintStart_toStartOf="@+id/career"
            app:layout_constraintTop_toBottomOf="@+id/career" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_middle_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/layout_liner_soc_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintWidth_percent="0.55">

        <ImageView
            android:id="@+id/btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/fb_link"
            app:srcCompat="@drawable/fb_circle_logo" />

        <ImageView
            android:id="@+id/btn_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/in_link"
            app:srcCompat="@drawable/in_circle_logo" />

        <ImageView
            android:id="@+id/btn_vk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/inst_link"
            app:srcCompat="@drawable/inst_circle_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_under_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_theme_margin_elements"
        android:fontFamily="@font/opensans"
        android:text="@string/text_under_profile_container"
        android:textColor="@color/background_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="@dimen/vertical_theme_btn_width"
        android:layout_height="@dimen/vertical_theme_btn_height"
        android:layout_marginBottom="@dimen/small_margin_size"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/opensans"
        android:inputType="textCapSentences"
        android:stateListAnimator="@null"
        android:text="@string/edit_profile_text"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="@dimen/extra_small_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_contacts_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/background_color"
        app:strokeWidth="@dimen/btn_stroke_width"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/view_contacts_btn"
        android:layout_width="@dimen/vertical_theme_btn_width"
        android:layout_height="@dimen/vertical_theme_btn_height"
        android:layout_marginBottom="@dimen/vertical_theme_margin_elements"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/opensans"
        android:text="@string/view_my_contacts_text"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>