<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="335dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans"
            android:text="@string/settings_text"
            android:textColor="@color/white2"
            android:textSize="@dimen/text_24sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans"
            android:text="@string/home_address_text"
            android:textColor="#B2B2B3"
            app:layout_constraintEnd_toEndOf="@+id/career"
            app:layout_constraintStart_toStartOf="@+id/career"
            app:layout_constraintTop_toBottomOf="@+id/career"

            tools:ignore="MissingConstraints" />



        <!-- Circle avatar -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/user_avatar"
            app:civ_border_color="@color/background_color"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_avatar"
            tools:ignore="MissingConstraints" />



        <TextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans"
            android:text="@string/career_text"
            android:textColor="#B2B2B3"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensans"
            android:text="@string/user_name_text"
            android:textColor="@color/white2"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/view_contacts_btn"
        android:layout_width="380dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/opensans"
        android:text="@string/view_my_contacts_text"
        android:textSize="@dimen/text_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="380dp"
        android:layout_height="59dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00000000"
        android:fontFamily="@font/opensans"
        android:stateListAnimator="@null"
        android:text="@string/edit_profile_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/background_color"
        app:strokeWidth="2sp" />

    <TextView
        android:id="@+id/text_under_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/opensans"
        android:text="@string/text_under_profile_container"
        android:textColor="@color/background_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/in_circle_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/orange_circle" />

    <ImageView
        android:id="@+id/fb_circle_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintEnd_toStartOf="@+id/in_circle_img"
        app:layout_constraintTop_toTopOf="@+id/in_circle_img"
        app:srcCompat="@drawable/orange_circle" />

    <ImageView
        android:id="@+id/vk_circle_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintStart_toEndOf="@+id/in_circle_img"
        app:layout_constraintTop_toTopOf="@+id/in_circle_img"
        app:srcCompat="@drawable/orange_circle" />

    <ImageView
        android:id="@+id/facebook_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/fb_circle_img"
        app:layout_constraintEnd_toEndOf="@+id/fb_circle_img"
        app:layout_constraintStart_toStartOf="@+id/fb_circle_img"
        app:layout_constraintTop_toTopOf="@+id/fb_circle_img"
        app:srcCompat="@drawable/facebook_logo" />

    <ImageView
        android:id="@+id/in_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/in_circle_img"
        app:layout_constraintEnd_toEndOf="@+id/in_circle_img"
        app:layout_constraintStart_toStartOf="@+id/in_circle_img"
        app:layout_constraintTop_toTopOf="@+id/in_circle_img"
        app:srcCompat="@drawable/in_logo" />

    <ImageView
        android:id="@+id/vk_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/voice_message_contentDescription"
        app:layout_constraintBottom_toBottomOf="@+id/vk_circle_img"
        app:layout_constraintEnd_toEndOf="@+id/vk_circle_img"
        app:layout_constraintStart_toStartOf="@+id/vk_circle_img"
        app:layout_constraintTop_toTopOf="@+id/vk_circle_img"
        app:srcCompat="@drawable/vk_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>